Added return to generate_token

--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -50,7 +50,8 @@
     "            qi = torch.argmax(qi_probs, dim=0)\n",
     "            list_question_tokens.append(VOCAB_IDX2_STR[qi].item())\n",
     "            list_token_classes.append(qi_class)\n",
-    "            \n",
+    "\n",
+    "        return \" \".join(list_question_tokens)\n",
     "            \n",
     "    def finished_generation(self, question_token):\n",
     "        return question_token == '?' or question_token =='EOS'"
