--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -19,11 +19,12 @@
     "        self.uqa_qg = uqa_qg\n",
     "        self.regularization = regularization\n",
     "        \n",
-    "    def generate_token(self, context: str, ans: str, list_question_tokens: list) -> str:\n",
+    "    def generate_token(self, context: str, ans: str, ans_start: int, list_question_tokens: list) -> str:\n",
     "        '''\n",
     "        Input:\n",
-    "            - context:\n",
-    "            - ans:\n",
+    "            - context\n",
+    "            - ans\n",
+    "            - ans_start\n",
     "            - list_question_tokens: the history of generated question tokens.\n",
     "            The form of list_question_tokens is a list of (q_token, class), where class is 0 for lm\n",
     "            token and 1 for uqa token\n",
@@ -40,8 +41,10 @@
     "        while not self.finished_generation(qi):\n",
     "            # Generate the probs of the ith query token using the lm and uqa models\n",
     "            lm_qi_probs = self.lm_qg.forward(context, ans, list_question_tokens)\n",
+    "            lm_qi = torch.argmax(lm_qi_probs, dim=0)\n",
     "            uqa_qi_probs = self.uqa_qg.forward(context, ans, list_question_tokens)\n",
-    "\n",
+    "            uqa_qi = torch.argmax(uqa_qi_probs, dim=0)\n",
+    "            \n",
     "            # Get the final token  prob distribution using regulatization\n",
     "            qi_probs, qi_class = self.regularization(lm_qi_probs, uqa_qi_probs, \n",
     "                                                     list_question_tokens, list_token_classes)\n",
@@ -54,8 +57,79 @@
     "        return \" \".join(list_question_tokens)\n",
     "            \n",
     "    def finished_generation(self, question_token):\n",
-    "        return question_token == '?' or question_token =='EOS'"
+    "        return question_token == '?' or question_token =='EOS'\n",
+    "    \n",
+    "    def __convert2squad(self, context: str, answer: str, ans_start: int,  question: str) -> dict:\n",
+    "        '''\n",
+    "        Create a SQuAD instance\n",
+    "        Inputs:\n",
+    "            - context: paragrah\n",
+    "            - answer\n",
+    "            - ans_start\n",
+    "            - question: might not be the full question (we are generating questions token by token)\n",
+    "        Returns:\n",
+    "            - squad instance\n",
+    "        '''\n",
+    "        squad = {'data': [], 'version': '1.0'}\n",
+    "        squad['data'].append({'paragraphs': [{'title': 'title', \n",
+    "                                              'context': context,\n",
+    "                                              'qas': [{'answers': [{'answer_start': ans_start, 'text': answer}],\n",
+    "                                                       'question': question,\n",
+    "                                                       'id': 0}]}]})\n",
+    "        return squad"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-21T08:29:17.876864Z",
+     "start_time": "2020-04-21T08:29:16.182043Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open('../datasets/squad_NER_ans_full_wo_questions_evenly_distributed.json', 'r') as f:\n",
+    "    squad = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-21T08:36:51.430868Z",
+     "start_time": "2020-04-21T08:36:51.424157Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'University_of_Notre_Dame',\n",
+       " 'context': 'Architecturally , the school has a Catholic character . Atop the Main Building \\'s gold dome is a golden statue of the Virgin Mary . Immediately in front of the Main Building and facing it , is a copper statue of Christ with arms upraised with the legend \" Venite Ad Me Omnes \" . Next to the Main Building is the Basilica of the Sacred Heart . Immediately behind the basilica is the Grotto , a Marian place of prayer and reflection . It is a replica of the grotto at Lourdes , France where the Virgin Mary reputedly appeared to Saint Bernadette Soubirous in 1858 . At the end of the main drive ( and in a direct line that connects through 3 statues and the Gold Dome ) , is a simple , modern stone statue of Mary .',\n",
+       " 'qas': [{'answers': [{'answer_start': 476, 'text': 'France'}],\n",
+       "   'question': '',\n",
+       "   'id': 0}]}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squad['data'][0]['paragraphs'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
