integrated QG modules

--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -9,14 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-21T11:04:42.873591Z",
+     "start_time": "2020-04-21T11:04:42.853311Z"
+    },
+    "code_folding": []
+   },
    "outputs": [],
    "source": [
+    "from BERTQG.token_generation import load_model, generate_token\n",
+    "\n",
     "class QuestionGeneration():\n",
     "    def __init__(self, lm_gq, uqa_qg, regularization):\n",
-    "        self.lm_qg = lm_qg\n",
-    "        self.uqa_qg = uqa_qg\n",
+    "        self.lm_qg, _, _ = load_model(lm_qg)\n",
+    "        self.uqa_qg, self.tokenizer, device = load_model(uqa_qg)\n",
     "        self.regularization = regularization\n",
     "        \n",
     "    def generate_token(self, context: str, ans: str, ans_start: int, list_question_tokens: list) -> str:\n",
@@ -38,26 +46,31 @@
     "        list_token_classes = []\n",
     "        qi = None\n",
     "        \n",
-    "        while not self.finished_generation(qi):\n",
-    "            # Generate the probs of the ith query token using the lm and uqa models\n",
-    "            lm_qi_probs = self.lm_qg.forward(context, ans, list_question_tokens)\n",
-    "            lm_qi = torch.argmax(lm_qi_probs, dim=0)\n",
-    "            uqa_qi_probs = self.uqa_qg.forward(context, ans, list_question_tokens)\n",
-    "            uqa_qi = torch.argmax(uqa_qi_probs, dim=0)\n",
+    "        while True:\n",
+    "            # Generate the toknes and probs of the ith query token using the lm and uqa models\n",
+    "            question_text = \" \".jon(list_question_tokens)\n",
+    "            lm_qi_token, lm_qi_idx, lm_qi_probs = generate_token(lm_qg, tokenizer, device, context, question_text, ans, ans_start)\n",
+    "            uqa_qi_token, uqa_qi_idx, uqa_qi_probs = generate_token(uqa_qg, tokenizer, device, context, question_text, ans, ans_start)\n",
     "            \n",
     "            # Get the final token  prob distribution using regulatization\n",
     "            qi_probs, qi_class = self.regularization(lm_qi_probs, uqa_qi_probs, \n",
     "                                                     list_question_tokens, list_token_classes)\n",
     "\n",
     "            # Get the predicted token\n",
-    "            qi = torch.argmax(qi_probs, dim=0)\n",
-    "            list_question_tokens.append(VOCAB_IDX2_STR[qi].item())\n",
+    "            if qi_class == 0: # LM\n",
+    "                qi = lm_qi_token\n",
+    "            else: # UQA\n",
+    "                qi = uqa_qi_token\n",
+    "                \n",
+    "            if self.finished_generation(qi): # [SEP]\n",
+    "                break\n",
+    "            list_question_tokens.append(qi)\n",
     "            list_token_classes.append(qi_class)\n",
     "\n",
     "        return \" \".join(list_question_tokens)\n",
     "            \n",
     "    def finished_generation(self, question_token):\n",
-    "        return question_token == '?' or question_token =='EOS'\n",
+    "        return question_token =='[SEP]'\n",
     "    \n",
     "    def __convert2squad(self, context: str, answer: str, ans_start: int,  question: str) -> dict:\n",
     "        '''\n",
@@ -78,6 +91,13 @@
     "                                                       'id': 0}]}]})\n",
     "        return squad"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -281,9 +301,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (thesis)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "thesis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
