--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -9,22 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T11:04:42.873591Z",
-     "start_time": "2020-04-21T11:04:42.853311Z"
+     "end_time": "2020-04-21T12:21:45.586110Z",
+     "start_time": "2020-04-21T12:21:45.049065Z"
     },
     "code_folding": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
+     ]
+    }
+   ],
    "source": [
     "from BERTQG.token_generation import load_model, generate_token\n",
     "\n",
     "class QuestionGeneration():\n",
-    "    def __init__(self, lm_gq, uqa_qg, regularization):\n",
-    "        self.lm_qg, _, _ = load_model(lm_qg)\n",
-    "        self.uqa_qg, self.tokenizer, device = load_model(uqa_qg)\n",
+    "    def __init__(self, bert_model, lm_gq, uqa_qg, regularization):\n",
+    "        self.lm_qg, _, _ = load_model(bert_model, lm_qg)\n",
+    "        self.uqa_qg, self.tokenizer, device = load_model(bert_model, uqa_qg)\n",
     "        self.regularization = regularization\n",
     "        \n",
     "    def generate_token(self, context: str, ans: str, ans_start: int, list_question_tokens: list) -> str:\n",
@@ -94,21 +102,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-21T12:22:00.704850Z",
+     "start_time": "2020-04-21T12:21:49.009922Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "04/21/2020 12:21:49 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "04/21/2020 12:21:53 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "04/21/2020 12:21:53 - INFO - BERTQG.modeling -   Model config {\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"type_vocab_size\": 3,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load BERTQG/models/lm_10k_QG/pytorch_model.bin\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "04/21/2020 12:21:56 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "04/21/2020 12:21:57 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "04/21/2020 12:21:57 - INFO - BERTQG.modeling -   Model config {\n",
+      "  \"attention_probs_dropout_prob\": 0.1,\n",
+      "  \"hidden_act\": \"gelu\",\n",
+      "  \"hidden_dropout_prob\": 0.1,\n",
+      "  \"hidden_size\": 768,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"intermediate_size\": 3072,\n",
+      "  \"max_position_embeddings\": 512,\n",
+      "  \"num_attention_heads\": 12,\n",
+      "  \"num_hidden_layers\": 12,\n",
+      "  \"type_vocab_size\": 3,\n",
+      "  \"vocab_size\": 30522\n",
+      "}\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load BERTQG/models/uqa_50k_QG/pytorch_model_60000.bin\n"
+     ]
+    }
+   ],
+   "source": [
+    "bert_model = 'BERTQG/models/bert-base-uncased'\n",
+    "lm_qg = 'BERTQG/models/lm_10k_QG/pytorch_model.bin'\n",
+    "uqa_qg = 'BERTQG/models/uqa_50k_QG/pytorch_model_60000.bin'\n",
+    "QG = QuestionGeneration(bert_model, lm_qg, uqa_qg, None)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T08:29:17.876864Z",
-     "start_time": "2020-04-21T08:29:16.182043Z"
+     "end_time": "2020-04-21T12:16:06.739415Z",
+     "start_time": "2020-04-21T12:16:06.733184Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 3319, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-53-e357e6ed0739>\", line 2, in <module>\n",
+      "    with open('../datasets/squad_NER_ans_full_wo_questions_evenly_distributed.json', 'r') as f:\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '../datasets/squad_NER_ans_full_wo_questions_evenly_distributed.json'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 2034, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'FileNotFoundError' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 1151, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 319, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 353, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 1502, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 1460, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 696, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 725, in getmodule\n",
+      "    file = getabsfile(object, _filename)\n",
+      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 709, in getabsfile\n",
+      "    return os.path.normcase(os.path.abspath(_filename))\n",
+      "  File \"/opt/conda/lib/python3.7/posixpath.py\", line 383, in abspath\n",
+      "    cwd = os.getcwd()\n",
+      "FileNotFoundError: [Errno 2] No such file or directory\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../datasets/squad_NER_ans_full_wo_questions_evenly_distributed.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "with open('../datasets/squad_NER_ans_full_wo_questions_evenly_distributed.json', 'r') as f:\n",
