generate_token -> generate_question

--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -35,7 +35,7 @@
     "        self.uqa_qg, self.tokenizer, device = load_model(bert_model, uqa_qg)\n",
     "        self.regularization = regularization\n",
     "        \n",
-    "    def generate_token(self, context: str, ans: str, ans_start: int, list_question_tokens: list) -> str:\n",
+    "    def generate_question(self, context: str, ans: str, ans_start: int, list_question_tokens: list) -> str:\n",
     "        '''\n",
     "        Input:\n",
     "            - context\n",
@@ -54,9 +54,11 @@
     "        list_token_classes = []\n",
     "        qi = None\n",
     "        \n",
-    "        while True:\n",
-    "            # Generate the toknes and probs of the ith query token using the lm and uqa models\n",
+    "        # generation finished when [SEP] is created\n",
+    "        while not self.finished_generation(qi):\n",
     "            question_text = \" \".jon(list_question_tokens)\n",
+    "            \n",
+    "            # Generate the toknes and probs of the ith query token using the lm and uqa models\n",
     "            lm_qi_token, lm_qi_idx, lm_qi_probs = generate_token(lm_qg, tokenizer, device, context, question_text, ans, ans_start)\n",
     "            uqa_qi_token, uqa_qi_idx, uqa_qi_probs = generate_token(uqa_qg, tokenizer, device, context, question_text, ans, ans_start)\n",
     "            \n",
@@ -70,8 +72,6 @@
     "            else: # UQA\n",
     "                qi = uqa_qi_token\n",
     "                \n",
-    "            if self.finished_generation(qi): # [SEP]\n",
-    "                break\n",
     "            list_question_tokens.append(qi)\n",
     "            list_token_classes.append(qi_class)\n",
     "\n",
@@ -178,107 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T12:16:06.739415Z",
-     "start_time": "2020-04-21T12:16:06.733184Z"
+     "end_time": "2020-04-21T08:29:17.876864Z",
+     "start_time": "2020-04-21T08:29:16.182043Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 3319, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-53-e357e6ed0739>\", line 2, in <module>\n",
-      "    with open('../datasets/squad_NER_ans_full_wo_questions_evenly_distributed.json', 'r') as f:\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: '../datasets/squad_NER_ans_full_wo_questions_evenly_distributed.json'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py\", line 2034, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'FileNotFoundError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 1151, in get_records\n",
-      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 319, in wrapped\n",
-      "    return f(*args, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/IPython/core/ultratb.py\", line 353, in _fixed_getinnerframes\n",
-      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
-      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 1502, in getinnerframes\n",
-      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
-      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 1460, in getframeinfo\n",
-      "    filename = getsourcefile(frame) or getfile(frame)\n",
-      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 696, in getsourcefile\n",
-      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
-      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 725, in getmodule\n",
-      "    file = getabsfile(object, _filename)\n",
-      "  File \"/opt/conda/lib/python3.7/inspect.py\", line 709, in getabsfile\n",
-      "    return os.path.normcase(os.path.abspath(_filename))\n",
-      "  File \"/opt/conda/lib/python3.7/posixpath.py\", line 383, in abspath\n",
-      "    cwd = os.getcwd()\n",
-      "FileNotFoundError: [Errno 2] No such file or directory\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../datasets/squad_NER_ans_full_wo_questions_evenly_distributed.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "with open('../datasets/squad_NER_ans_full_wo_questions_evenly_distributed.json', 'r') as f:\n",
     "    squad = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-21T08:36:51.430868Z",
-     "start_time": "2020-04-21T08:36:51.424157Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'University_of_Notre_Dame',\n",
-       " 'context': 'Architecturally , the school has a Catholic character . Atop the Main Building \\'s gold dome is a golden statue of the Virgin Mary . Immediately in front of the Main Building and facing it , is a copper statue of Christ with arms upraised with the legend \" Venite Ad Me Omnes \" . Next to the Main Building is the Basilica of the Sacred Heart . Immediately behind the basilica is the Grotto , a Marian place of prayer and reflection . It is a replica of the grotto at Lourdes , France where the Virgin Mary reputedly appeared to Saint Bernadette Soubirous in 1858 . At the end of the main drive ( and in a direct line that connects through 3 statues and the Gold Dome ) , is a simple , modern stone statue of Mary .',\n",
-       " 'qas': [{'answers': [{'answer_start': 476, 'text': 'France'}],\n",
-       "   'question': '',\n",
-       "   'id': 0}]}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "squad['data'][0]['paragraphs'][0]"
    ]
   },
   {
@@ -438,9 +349,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (thesis)",
    "language": "python",
-   "name": "python3"
+   "name": "thesis"
   },
   "language_info": {
    "codemirror_mode": {
