Integrate Regul module

--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-21T12:21:45.586110Z",
@@ -17,22 +17,15 @@
     },
     "code_folding": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from BERTQG.token_generation import load_model, generate_token\n",
+    "from Regularization_module import Regularizer_Discriminator\n",
     "\n",
     "class QuestionGeneration():\n",
     "    def __init__(self, bert_model, lm_gq, uqa_qg, regularization):\n",
-    "        self.lm_qg, _, _ = load_model(bert_model, lm_qg)\n",
-    "        self.uqa_qg, self.tokenizer, device = load_model(bert_model, uqa_qg)\n",
+    "        #self.lm_qg, _, _ = load_model(bert_model, lm_qg)\n",
+    "        #self.uqa_qg, self.tokenizer, device = load_model(bert_model, uqa_qg)\n",
     "        self.regularization = regularization\n",
     "        \n",
     "    def generate_question(self, context: str, ans: str, ans_start: int, list_question_tokens: list) -> str:\n",
@@ -63,11 +56,11 @@
     "            uqa_qi_token, uqa_qi_idx, uqa_qi_probs = generate_token(uqa_qg, tokenizer, device, context, question_text, ans, ans_start)\n",
     "            \n",
     "            # Get the final token  prob distribution using regulatization\n",
-    "            qi_probs, qi_class = self.regularization(lm_qi_probs, uqa_qi_probs, \n",
-    "                                                     list_question_tokens, list_token_classes)\n",
-    "\n",
+    "            jsonobj = self.__convert2squad(context, ans, ans_start, question_text)\n",
+    "            qi_probs = self.regularization.predict_prob(jsonobj) #qi_probs: [batchsize,2] ndarray\n",
+    "            qi_class = np.argmin(qi_probs, axis=1) #qi_class: [batchsize,] ndarray 0:should generate UQA, 1:should generate LM\n",
     "            # Get the predicted token\n",
-    "            if qi_class == 0: # LM\n",
+    "            if qi_class == 1: # LM\n",
     "                qi = lm_qi_token\n",
     "            else: # UQA\n",
     "                qi = uqa_qi_token\n",
@@ -98,6 +91,15 @@
     "                                                       'question': question,\n",
     "                                                       'id': 0}]}]})\n",
     "        return squad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regul_model = Regularizer_Discriminator(\"./discri_model.bin\") # model path here"
    ]
   },
   {
@@ -173,7 +175,7 @@
     "bert_model = 'BERTQG/models/bert-base-uncased'\n",
     "lm_qg = 'BERTQG/models/lm_10k_QG/pytorch_model.bin'\n",
     "uqa_qg = 'BERTQG/models/uqa_50k_QG/pytorch_model_60000.bin'\n",
-    "QG = QuestionGeneration(bert_model, lm_qg, uqa_qg, None)"
+    "QG = QuestionGeneration(bert_model, lm_qg, uqa_qg, regul_model)"
    ]
   },
   {
@@ -349,9 +351,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (thesis)",
+   "display_name": "Python (transformer)",
    "language": "python",
-   "name": "thesis"
+   "name": "git"
   },
   "language_info": {
    "codemirror_mode": {
@@ -363,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   },
   "toc": {
    "base_numbering": 1,
