--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-21T12:21:45.586110Z",
@@ -24,9 +24,9 @@
     "\n",
     "class QuestionGeneration():\n",
     "    def __init__(self, bert_model, lm_gq, uqa_qg, regularization):\n",
-    "        #self.lm_qg, _, _ = load_model(bert_model, lm_qg)\n",
-    "        #self.uqa_qg, self.tokenizer, device = load_model(bert_model, uqa_qg)\n",
-    "        self.regularization = regularization\n",
+    "        self.lm_qg, _, _ = load_model(bert_model, lm_qg)\n",
+    "        self.uqa_qg, self.tokenizer, device = load_model(bert_model, uqa_qg)\n",
+    "        self.regularization = Regularizer_Discriminator(regularization)\n",
     "        \n",
     "    def generate_question(self, context: str, ans: str, ans_start: int, list_question_tokens: list) -> str:\n",
     "        '''\n",
@@ -95,15 +95,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regul_model = Regularizer_Discriminator(\"./discri_model.bin\") # model path here"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
@@ -113,61 +104,45 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "04/21/2020 12:21:49 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/21/2020 12:21:53 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/21/2020 12:21:53 - INFO - BERTQG.modeling -   Model config {\n",
-      "  \"attention_probs_dropout_prob\": 0.1,\n",
-      "  \"hidden_act\": \"gelu\",\n",
-      "  \"hidden_dropout_prob\": 0.1,\n",
-      "  \"hidden_size\": 768,\n",
-      "  \"initializer_range\": 0.02,\n",
-      "  \"intermediate_size\": 3072,\n",
-      "  \"max_position_embeddings\": 512,\n",
-      "  \"num_attention_heads\": 12,\n",
-      "  \"num_hidden_layers\": 12,\n",
-      "  \"type_vocab_size\": 3,\n",
-      "  \"vocab_size\": 30522\n",
-      "}\n",
-      "\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a9e639c907a48238fc100d2368cf4c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=361.0, style=ProgressStyle(description_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Load BERTQG/models/lm_10k_QG/pytorch_model.bin\n"
+      "\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "04/21/2020 12:21:56 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/21/2020 12:21:57 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/21/2020 12:21:57 - INFO - BERTQG.modeling -   Model config {\n",
-      "  \"attention_probs_dropout_prob\": 0.1,\n",
-      "  \"hidden_act\": \"gelu\",\n",
-      "  \"hidden_dropout_prob\": 0.1,\n",
-      "  \"hidden_size\": 768,\n",
-      "  \"initializer_range\": 0.02,\n",
-      "  \"intermediate_size\": 3072,\n",
-      "  \"max_position_embeddings\": 512,\n",
-      "  \"num_attention_heads\": 12,\n",
-      "  \"num_hidden_layers\": 12,\n",
-      "  \"type_vocab_size\": 3,\n",
-      "  \"vocab_size\": 30522\n",
-      "}\n",
-      "\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd20fff5666b4733b83e493701da3866",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=231508.0, style=ProgressStyle(descripti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Load BERTQG/models/uqa_50k_QG/pytorch_model_60000.bin\n"
+      "\n"
      ]
     }
    ],
@@ -175,6 +150,7 @@
     "bert_model = 'BERTQG/models/bert-base-uncased'\n",
     "lm_qg = 'BERTQG/models/lm_10k_QG/pytorch_model.bin'\n",
     "uqa_qg = 'BERTQG/models/uqa_50k_QG/pytorch_model_60000.bin'\n",
+    "regul_model = \"./discri_model.bin\"# model path here\n",
     "QG = QuestionGeneration(bert_model, lm_qg, uqa_qg, regul_model)"
    ]
   },
@@ -351,9 +327,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (transformer)",
+   "display_name": "Python (transformernew)",
    "language": "python",
-   "name": "git"
+   "name": "transformernew"
   },
   "language_info": {
    "codemirror_mode": {
