Change to batch 1

--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -59,6 +59,7 @@
     "            jsonobj = self.__convert2squad(context, ans, ans_start, question_text)\n",
     "            qi_probs = self.regularization.predict_prob(jsonobj) #qi_probs: [batchsize,2] ndarray\n",
     "            qi_class = np.argmin(qi_probs, axis=1) #qi_class: [batchsize,] ndarray 0:should generate UQA, 1:should generate LM\n",
+    "            qi_class = qi_class[0] #For now, let's assume batch = 1\n",
     "            # Get the predicted token\n",
     "            if qi_class == 1: # LM\n",
     "                qi = lm_qi_token\n",
