--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -176,7 +176,8 @@
    "source": [
     "bert_model = 'BERTQG/models/bert-base-uncased'\n",
     "lm_qg = 'BERTQG/models/lm_10k_QG/pytorch_model.bin'\n",
-    "uqa_qg = 'BERTQG/models/uqa_50k_QG/pytorch_model_60000.bin'\n",
+    "BERTQG/models/uqa_10k_QG/\n",
+    "uqa_qg = 'BERTQG/models/uqa_10k_QG/pytorch_model.bin'\n",
     "#regul_model = \"./discri_model.bin\"# model path here\n",
     "QG = QuestionGeneration(bert_model, lm_qg, uqa_qg)"
    ]
