--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -9,30 +9,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 83,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-28T15:05:24.263928Z",
+     "start_time": "2020-04-28T15:05:24.257399Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "class Freq_Regularization():\n",
     "    def predict_class(self, list_token_classes):\n",
     "        '''\n",
     "        UQA class = 0\n",
     "        LM class = 1\n",
     "        '''\n",
-    "        prob_lm = 1 - sum(list_token_classes)/len(list_token_classes)\n",
-    "        if prob_lm > 0.5:\n",
-    "            return 1\n",
-    "        else:\n",
-    "            return 0"
+    "#         prob_lm = 1 - sum(list_token_classes)/len(list_token_classes)        \n",
+    "#         if prob_lm > 0.5:\n",
+    "#             return 1\n",
+    "#         else:\n",
+    "#             return 0\n",
+    "  \n",
+    "        if len(list_token_classes) == 0:\n",
+    "            return np.random.choice(2, 1, p=[0.5, 0.5])[0]\n",
+    "\n",
+    "        prob_uqa = sum(list_token_classes)/len(list_token_classes)\n",
+    "        prob_lm = 1 - prob_uqa\n",
+    "        return np.random.choice(2, 1, p=[prob_uqa, prob_lm])[0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 101,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T16:03:25.098138Z",
-     "start_time": "2020-04-21T16:03:21.050179Z"
+     "end_time": "2020-04-28T15:08:47.454589Z",
+     "start_time": "2020-04-28T15:08:47.416627Z"
     },
     "code_folding": []
    },
@@ -47,22 +60,22 @@
     "        self.uqa_qg, self.tokenizer, self.device = load_model(bert_model, uqa_qg)\n",
     "        self.regularization = Freq_Regularization()\n",
     "        \n",
-    "    def generate_question(self, context: str, ans: str, ans_start: int, list_question_tokens: list = []) -> str:\n",
+    "    def generate_question(self, context: str, ans: str, ans_start: str, list_question_tokens: list = []) -> str:\n",
     "        '''\n",
     "        Input:\n",
     "            - context\n",
     "            - ans\n",
     "            - ans_start\n",
     "            - list_question_tokens: the history of generated question tokens.\n",
-    "            The form of list_question_tokens is a list of (q_token, class), where class is 0 for lm\n",
-    "            token and 1 for uqa token\n",
+    "            The form of list_question_tokens is a list of (q_token, class), where class is 0 for uqa\n",
+    "            token and 1 for lm token\n",
     "        Output:\n",
     "            - The next generated question token\n",
     "        '''\n",
     "        # contains the tokens of the generated question\n",
     "        list_question_tokens = []\n",
     "        # contains the classes of each token of the gen. question. Same len as list_question_tokens\n",
-    "        # 0 = LM, 1 = UQA\n",
+    "        # 0 = UQA, 1 = LM\n",
     "        list_token_classes = []\n",
     "        qi = None\n",
     "        \n",
@@ -71,8 +84,8 @@
     "            question_text = \" \".join(list_question_tokens)\n",
     "            \n",
     "            # Generate the toknes and probs of the ith query token using the lm and uqa models\n",
-    "            lm_qi_token, lm_qi_idx, lm_qi_probs = generate_token(lm_qg, self.tokenizer, self.device, context, question_text, ans, ans_start)\n",
-    "            uqa_qi_token, uqa_qi_idx, uqa_qi_probs = generate_token(uqa_qg, self.tokenizer, self.device, context, question_text, ans, ans_start)\n",
+    "            lm_qi_token, lm_qi_idx, lm_qi_probs = generate_token(self.lm_qg, self.tokenizer, self.device, context, question_text, ans, ans_start)\n",
+    "            uqa_qi_token, uqa_qi_idx, uqa_qi_probs = generate_token(self.uqa_qg, self.tokenizer, self.device, context, question_text, ans, ans_start)\n",
     "            \n",
     "            # Get token class to use\n",
     "            qi_class = self.regularization.predict_class(list_token_classes)\n",
@@ -84,8 +97,13 @@
     "                \n",
     "            list_question_tokens.append(qi)\n",
     "            list_token_classes.append(qi_class)\n",
+    "            \n",
+    "            # for testing\n",
+    "            print(list_question_tokens)\n",
+    "            print([\"UQA\" if cls == 0 else \"LM\" for cls in list_token_classes])\n",
+    "            print(\"\\n\")\n",
     "\n",
-    "        return \" \".join(list_question_tokens)\n",
+    "        return \" \".join(list_question_tokens[:-1]) # without [SEP]\n",
     "            \n",
     "    def finished_generation(self, question_token):\n",
     "        return question_token =='[SEP]'\n",
@@ -112,11 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T16:03:55.604246Z",
-     "start_time": "2020-04-21T16:03:31.692383Z"
+     "end_time": "2020-04-28T15:08:52.230835Z",
+     "start_time": "2020-04-28T15:08:48.699639Z"
     }
    },
    "outputs": [
@@ -124,9 +142,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/28/2020 13:40:22 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/28/2020 13:40:22 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/28/2020 13:40:22 - INFO - BERTQG.modeling -   Model config {\n",
+      "04/28/2020 15:08:48 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "04/28/2020 15:08:48 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "04/28/2020 15:08:48 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -153,9 +171,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/28/2020 13:40:24 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/28/2020 13:40:24 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/28/2020 13:40:24 - INFO - BERTQG.modeling -   Model config {\n",
+      "04/28/2020 15:08:50 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "04/28/2020 15:08:50 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "04/28/2020 15:08:50 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -196,14 +214,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-21T08:29:17.876864Z",
-     "start_time": "2020-04-21T08:29:16.182043Z"
+     "end_time": "2020-04-28T14:10:38.047781Z",
+     "start_time": "2020-04-28T14:10:38.040936Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/workspace/ml-workspace/emnlp_qg/datasets/squad_train_evenly_distributed.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-caf315a7e7f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/workspace/ml-workspace/emnlp_qg/datasets/squad_train_evenly_distributed.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0msquad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/workspace/ml-workspace/emnlp_qg/datasets/squad_train_evenly_distributed.json'"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "with open('/workspace/ml-workspace/emnlp_qg/datasets/squad_train_evenly_distributed.json', 'r') as f:\n",
@@ -216,32 +246,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context = squad['data'][0]['paragraphs'][0]['context']\n",
-    "ans = squad['data'][0]['paragraphs'][0]['qas'][0]['answers'][0]['text']\n",
-    "ans_start = squad['data'][0]['paragraphs'][0]['qas'][0]['answers'][0]['answer_start']"
+    "# context = squad['data'][0]['paragraphs'][0]['context']\n",
+    "# ans = squad['data'][0]['paragraphs'][0]['qas'][0]['answers'][0]['text']\n",
+    "# ans_start = squad['data'][0]['paragraphs'][0]['qas'][0]['answers'][0]['answer_start']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 157,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-28T15:13:19.847214Z",
+     "start_time": "2020-04-28T15:13:19.839996Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "context = \"The city has a proud history of theatre. Stephen Kemble of the famous Kemble family successfully managed the original Theatre Royal, Newcastle for fifteen years (1791–1806). He brought members of his famous acting family such as Sarah Siddons and John Kemble out of London to Newcastle. Stephen Kemble guided the theatre through many celebrated seasons. The original Theatre Royal in Newcastle was opened on 21 January 1788 and was located on Mosley Street. It was demolished to make way for Grey Street, where its replacement was built.\"\n",
+    "question_text = \"when did the original theatre royal open ?\"\n",
+    "ans = \"1788\"\n",
+    "ans_start = context.find(ans)\n",
+    "assert context[ans_start:ans_start+len(ans)] == ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-28T15:14:51.167492Z",
+     "start_time": "2020-04-28T15:14:50.525903Z"
+    }
+   },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-49bb3c889e7a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mQG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_question\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mcontext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mans_start\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-24-f2ca543af288>\u001b[0m in \u001b[0;36mgenerate_question\u001b[0;34m(self, context, ans, ans_start, list_question_tokens)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0;31m# Generate the toknes and probs of the ith query token using the lm and uqa models\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m             \u001b[0mlm_qi_token\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlm_qi_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlm_qi_probs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_token\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlm_qg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquestion_text\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mans_start\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m             \u001b[0muqa_qi_token\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muqa_qi_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muqa_qi_probs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_token\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muqa_qg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquestion_text\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mans_start\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/workspace/ml-workspace/emnlp_qg/regularization/UQA/BERTQG/token_generation.py\u001b[0m in \u001b[0;36mgenerate_token\u001b[0;34m(model, tokenizer, device, context, question_text, answer, answer_start)\u001b[0m\n\u001b[1;32m    314\u001b[0m     \u001b[0mlabel_pos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel_pos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    315\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 316\u001b[0;31m     \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_ids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msegment_ids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_mask\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    317\u001b[0m     \u001b[0mprobabilities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog_softmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlabel_pos\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcpu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# vocab size (30522)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['when']\n",
+      "['LM']\n",
+      "\n",
+      "\n",
+      "['when', 'when']\n",
+      "['LM', 'UQA']\n",
+      "\n",
+      "\n",
+      "['when', 'when', 'did']\n",
+      "['LM', 'UQA', 'LM']\n",
+      "\n",
+      "\n",
+      "['when', 'when', 'did', 'the']\n",
+      "['LM', 'UQA', 'LM', 'UQA']\n",
+      "\n",
+      "\n",
+      "['when', 'when', 'did', 'the', 'original']\n",
+      "['LM', 'UQA', 'LM', 'UQA', 'LM']\n",
+      "\n",
+      "\n",
+      "['when', 'when', 'did', 'the', 'original', 'theatre']\n",
+      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM']\n",
+      "\n",
+      "\n",
+      "['when', 'when', 'did', 'the', 'original', 'theatre', 'royal']\n",
+      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'LM']\n",
+      "\n",
+      "\n",
+      "['when', 'when', 'did', 'the', 'original', 'theatre', 'royal', 'open']\n",
+      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'LM', 'LM']\n",
+      "\n",
+      "\n",
+      "['when', 'when', 'did', 'the', 'original', 'theatre', 'royal', 'open', '?']\n",
+      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'LM', 'LM', 'LM']\n",
+      "\n",
+      "\n",
+      "['when', 'when', 'did', 'the', 'original', 'theatre', 'royal', 'open', '?', '[SEP]']\n",
+      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'LM', 'LM', 'LM', 'UQA']\n",
+      "\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'when when did the original theatre royal open ?'"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "QG.generate_question( context, ans, ans_start)"
+    "QG.generate_question(context, ans, ans_start)"
    ]
   },
   {
@@ -394,9 +490,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "thesis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
