Removed unneeded comment

--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-28T15:05:24.263928Z",
@@ -25,12 +25,6 @@
     "        UQA class = 0\n",
     "        LM class = 1\n",
     "        '''\n",
-    "#         prob_lm = 1 - sum(list_token_classes)/len(list_token_classes)        \n",
-    "#         if prob_lm > 0.5:\n",
-    "#             return 1\n",
-    "#         else:\n",
-    "#             return 0\n",
-    "  \n",
     "        if len(list_token_classes) == 0:\n",
     "            return np.random.choice(2, 1, p=[0.5, 0.5])[0]\n",
     "\n",
@@ -41,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-28T15:08:47.454589Z",
@@ -130,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-28T15:08:52.230835Z",
@@ -142,9 +136,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/28/2020 15:08:48 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/28/2020 15:08:48 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/28/2020 15:08:48 - INFO - BERTQG.modeling -   Model config {\n",
+      "04/29/2020 00:57:33 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "04/29/2020 00:57:33 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "04/29/2020 00:57:33 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -171,9 +165,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/28/2020 15:08:50 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "04/28/2020 15:08:50 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "04/28/2020 15:08:50 - INFO - BERTQG.modeling -   Model config {\n",
+      "04/29/2020 00:57:35 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "04/29/2020 00:57:35 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "04/29/2020 00:57:35 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -214,26 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-28T14:10:38.047781Z",
      "start_time": "2020-04-28T14:10:38.040936Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/workspace/ml-workspace/emnlp_qg/datasets/squad_train_evenly_distributed.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-caf315a7e7f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/workspace/ml-workspace/emnlp_qg/datasets/squad_train_evenly_distributed.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0msquad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/workspace/ml-workspace/emnlp_qg/datasets/squad_train_evenly_distributed.json'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "with open('/workspace/ml-workspace/emnlp_qg/datasets/squad_train_evenly_distributed.json', 'r') as f:\n",
@@ -242,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-28T15:13:19.847214Z",
@@ -271,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-28T15:14:51.167492Z",
@@ -284,43 +266,51 @@
      "output_type": "stream",
      "text": [
       "['when']\n",
-      "['LM']\n",
+      "['UQA']\n",
       "\n",
       "\n",
-      "['when', 'when']\n",
-      "['LM', 'UQA']\n",
+      "['when', 'did']\n",
+      "['UQA', 'LM']\n",
       "\n",
       "\n",
-      "['when', 'when', 'did']\n",
-      "['LM', 'UQA', 'LM']\n",
+      "['when', 'did', 'the']\n",
+      "['UQA', 'LM', 'LM']\n",
       "\n",
       "\n",
-      "['when', 'when', 'did', 'the']\n",
-      "['LM', 'UQA', 'LM', 'UQA']\n",
+      "['when', 'did', 'the', 'original']\n",
+      "['UQA', 'LM', 'LM', 'LM']\n",
       "\n",
       "\n",
-      "['when', 'when', 'did', 'the', 'original']\n",
-      "['LM', 'UQA', 'LM', 'UQA', 'LM']\n",
+      "['when', 'did', 'the', 'original', 'theatre']\n",
+      "['UQA', 'LM', 'LM', 'LM', 'UQA']\n",
       "\n",
       "\n",
-      "['when', 'when', 'did', 'the', 'original', 'theatre']\n",
-      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM']\n",
+      "['when', 'did', 'the', 'original', 'theatre', 'royal']\n",
+      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA']\n",
       "\n",
       "\n",
-      "['when', 'when', 'did', 'the', 'original', 'theatre', 'royal']\n",
-      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'LM']\n",
+      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open']\n",
+      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM']\n",
       "\n",
       "\n",
-      "['when', 'when', 'did', 'the', 'original', 'theatre', 'royal', 'open']\n",
-      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'LM', 'LM']\n",
+      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on']\n",
+      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA']\n",
       "\n",
       "\n",
-      "['when', 'when', 'did', 'the', 'original', 'theatre', 'royal', 'open', '?']\n",
-      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'LM', 'LM', 'LM']\n",
+      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on', '21']\n",
+      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA', 'LM']\n",
       "\n",
       "\n",
-      "['when', 'when', 'did', 'the', 'original', 'theatre', 'royal', 'open', '?', '[SEP]']\n",
-      "['LM', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'LM', 'LM', 'LM', 'UQA']\n",
+      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on', '21', 'january']\n",
+      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA', 'LM', 'LM']\n",
+      "\n",
+      "\n",
+      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on', '21', 'january', '?']\n",
+      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'UQA']\n",
+      "\n",
+      "\n",
+      "['when', 'did', 'the', 'original', 'theatre', 'royal', 'open', 'on', '21', 'january', '?', '[SEP]']\n",
+      "['UQA', 'LM', 'LM', 'LM', 'UQA', 'UQA', 'LM', 'UQA', 'LM', 'LM', 'UQA', 'UQA']\n",
       "\n",
       "\n"
      ]
@@ -328,10 +318,10 @@
     {
      "data": {
       "text/plain": [
-       "'when when did the original theatre royal open ?'"
+       "'when did the original theatre royal open on 21 january ?'"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,9 +480,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "thesis",
    "language": "python",
-   "name": "python3"
+   "name": "thesis"
   },
   "language_info": {
    "codemirror_mode": {
