Discriminator based regularize code

--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "from BERTQG.token_generation import load_model, generate_token\n",
-    "#from Regularization_module import Regularizer_Discriminator\n",
+    "from Regularization_module import Regularizer_Discriminator\n",
     "from itertools import groupby\n",
     "\n",
     "\n",
@@ -47,7 +47,8 @@
     "    def __init__(self, bert_model, lm_gq, uqa_qg, regularization=None):\n",
     "        self.lm_qg, _, _ = load_model(bert_model, lm_qg)\n",
     "        self.uqa_qg, self.tokenizer, self.device = load_model(bert_model, uqa_qg)\n",
-    "        self.regularization = Freq_Regularization()\n",
+    "        #self.regularization = Freq_Regularization()\n",
+    "        self.regularization = Regularizer_Discriminator(regularization)\n",
     "        \n",
     "    def generate_question(self, context: str, ans: str, ans_start: str, list_question_tokens: list = []) -> str:\n",
     "        '''\n",
@@ -62,12 +63,13 @@
     "            - The next generated question token\n",
     "        '''\n",
     "        # contains the tokens of the generated question\n",
-    "        list_question_tokens = []\n",
+    "        if len(list_question_tokens) == 0:\n",
+    "          list_question_tokens = []\n",
     "        # contains the classes of each token of the gen. question. Same len as list_question_tokens\n",
     "        # 0 = UQA, 1 = LM\n",
     "        list_token_classes = []\n",
     "        qi = None\n",
-    "        \n",
+    "        max_legnth = 50\n",
     "        # generation finished when [SEP] is created\n",
     "        while not self.__finished_generation(qi):\n",
     "            question_text = \" \".join(list_question_tokens)\n",
@@ -77,7 +79,8 @@
     "            uqa_qi_token, uqa_qi_idx, uqa_qi_probs = generate_token(self.uqa_qg, self.tokenizer, self.device, context, question_text, ans, ans_start)\n",
     "            \n",
     "            # Get token class to use\n",
-    "            qi_class = self.regularization.predict_class(list_token_classes)\n",
+    "            #qi_class = self.regularization.predict_class(list_token_classes)\n",
+    "            qi_class= self.regularization.predict_class(context,ans,ans_start,question_text,list_question_tokens)\n",
     "            # Get the predicted token\n",
     "            if qi_class == 1: # LM\n",
     "                qi = lm_qi_token\n",
@@ -91,8 +94,10 @@
     "#             print(list_question_tokens)\n",
     "#             print([\"UQA\" if cls == 0 else \"LM\" for cls in list_token_classes])\n",
     "#             print(\"\\n\")\n",
+    "            if (len(list_question_tokens) > max_legnth):\n",
+    "              break\n",
     "        list_question_tokens = self.__remove_consecutive_repeated_tokens(list_question_tokens)\n",
-    "        return \" \".join(list_question_tokens[:-1]) # without [SEP]\n",
+    "        return \" \".join(list_question_tokens[:-1]),list_token_classes # without [SEP]\n",
     "            \n",
     "    def __finished_generation(self, question_token):\n",
     "        return question_token =='[SEP]'\n",
@@ -104,8 +109,7 @@
     "        so we need to remove one when\n",
     "        '''\n",
     "        return [x[0] for x in groupby(list_tokens)]\n",
-    "    #assert remove_consecutive_repeated_tokens([1,1,1,1,1,1,2,3,4,4,5,1,2]) == [1, 2, 3, 4, 5, 1, 2]\n",
-    "    "
+    "    #assert remove_consecutive_repeated_tokens([1,1,1,1,1,1,2,3,4,4,5,1,2]) == [1, 2, 3, 4, 5, 1, 2]"
    ]
   },
   {
@@ -181,8 +185,9 @@
     "bert_model = 'BERTQG/models/bert-base-uncased'\n",
     "lm_qg = 'BERTQG/models/lm_10k_QG/pytorch_model.bin'\n",
     "uqa_qg = 'BERTQG/models/uqa_10k_QG/pytorch_model.bin'\n",
-    "#regul_model = \"./discri_model.bin\"# model path here\n",
-    "QG = QuestionGeneration(bert_model, lm_qg, uqa_qg)"
+    "regul_model = \"\"# model path here\n",
+    "#QG = QuestionGeneration(bert_model, lm_qg, uqa_qg)\n",
+    "QG = QuestionGeneration(bert_model, lm_qg, uqa_qg, regul_model)"
    ]
   },
   {
@@ -207,27 +212,8 @@
     "question_text = \"when did the original theatre royal open ?\"\n",
     "ans = \"1788\"\n",
     "ans_start = context.find(ans)\n",
-    "assert context[ans_start:ans_start+len(ans)] == ans"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'when was the first theatre royal in newcastle and where was the original theatre royal in newcastle ?'"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "QG.generate_question(context, ans, ans_start)"
+    "assert context[ans_start:ans_start+len(ans)] == ans\n",
+    "query, history= QG.generate_question(context, ans, ans_start,[])"
    ]
   }
  ],
